--- a/index.html
+++ b/index.html
@@ -4,99 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Smart Kitchen</title>
-    <style>
-        :root {
-            --primary: #2563eb;
-            --danger: #ef4444;
-            --light: #f8fafc;
-            --text: #334155;
-            --muted: #64748b;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #f1f5f9 0%, #e2e8f0 100%);
-            min-height: 100vh;
-            color: var(--text);
-            padding: 1rem;
-            line-height: 1.5;
-        }
-
-        .container {
-            max-width: 640px;
-            margin: 2rem auto;
-            background: white;
-            border-radius: 1rem;
-            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-        }
-
-        header {
-            background: var(--primary);
-            color: white;
-            padding: 1.5rem;
-            text-align: center;
-        }
-
-        h1 { font-size: 1.5rem; font-weight: 600; }
-
-        .status_bar {
-            display: flex;
-            justify-content: space-between;
-            padding: 0.75rem 1.5rem;
-            background: var(--light);
-            border-bottom: 1px solid #e2e8f0;
-            font-size: 0.875rem;
-        }
-
-        .mainbody {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 1rem;
-            padding: 1.5rem;
-        }
-
-        .block {
-            background: white;
-            border-radius: 0.75rem;
-            padding: 1.25rem;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
-            border-top: 4px solid var(--primary);
-            text-align: center;
-        }
-
-        .icon { font-size: 2rem; margin-bottom: 0.75rem; color: var(--primary); }
-
-        .block_title { font-size: 0.875rem; color: var(--muted); margin-bottom: 0.5rem; font-weight: 500; }
-
-        .block_value { font-size: 1.5rem; font-weight: 700; margin: 0.25rem 0; }
-
-        .status_indicator {
-            display: inline-block;
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            background-color: var(--muted);
-        }
-
-        .last_updated {
-            text-align: center;
-            padding: 1rem;
-            font-size: 0.8125rem;
-            color: var(--muted);
-            border-top: 1px solid #e2e8f0;
-        }
-
-        @media (max-width: 480px) {
-            .mainbody { grid-template-columns: 1fr 1fr; }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -134,75 +42,7 @@
         </div>
         <div class="last_updated" id="last_updated">Last updated: --</div>
     </div>
-
-    <script>
-        const elements = {
-            temp: document.getElementById('temp'),
-            hum: document.getElementById('hum'),
-            smoke: document.getElementById('smoke'),
-            motion: document.getElementById('motion'),
-            motion_indicator: document.getElementById('motion_indicator'),
-            last_updated: document.getElementById('last_updated'),
-            connection_status: document.getElementById('connection_status'),
-            cards: {
-                temp: document.getElementById('temp_card'),
-                hum: document.getElementById('hum_card'),
-                smoke: document.getElementById('smoke_card')
-            }
-        };
-
-        let last_data = null;
-        let connection_ok = true;
-
-        function updateCardState(card, value) {
-            const dangerThreshold = parseInt(card.dataset.danger);
-            card.className = 'block';
-            if (value >= dangerThreshold) card.classList.add('alert');
-        }
-
-        function processData(data) {
-            if (data === null) {
-                if (connection_ok) {
-                    connection_ok = false;
-                    connection_status.innerHTML = 'Disconnected <span class="status_indicator alert"></span>';
-                }
-                return;
-            }
-
-            if (!connection_ok) {
-                connection_ok = true;
-                connection_status.innerHTML = 'Connected <span class="status_indicator"></span>';
-            }
-
-            last_data = data;
-
-            elements.temp.textContent = data.temp.toFixed(1);
-            elements.hum.textContent = data.hum.toFixed(0);
-            elements.smoke.textContent = data.smoke.toFixed(0);
-            elements.motion.textContent = data.motion ? "Detected" : "No motion";
-            elements.motion_indicator.className = data.motion ? "status_indicator" : "status_indicator inactive";
-
-            updateCardState(elements.cards.temp, data.temp);
-            updateCardState(elements.cards.hum, data.hum);
-            updateCardState(elements.cards.smoke, data.smoke);
-
-            // Simplified last updated line
-            elements.last_updated.innerText = 'Last updated: ' + new Date().toLocaleTimeString();
-        }
-
-        function fetchData() {
-            const mock_data = {
-                temp: Math.random() * 15 + 20,  // Simulate temperature between 20-35°C
-                hum: Math.random() * 30 + 40,   // Simulate humidity between 40-70%
-                smoke: Math.random() * 60,      // Simulate smoke level between 0-60ppm
-                motion: Math.random() > 0.7     // 30% chance of motion
-            };
-            processData(mock_data);
-        }
-
-        fetchData();
-        setInterval(fetchData, 5000);
-        window.addEventListener('focus', fetchData);
-    </script>
+<script src="script.js"></script>
+    
 </body>
 </html>
